# llvm-course-2023

./: .clang-format  .gitignore  README.md  pass.cpp  pass_result.txt
pass/: log.c  log_parser.cpp  pass.cpp
solution/: CMakeLists.txt  life.c  random.c  sim.h
solution/apps/: CMakeLists.txt  main.c  pass.cpp
solution/include/life/: life.h
solution/include/sim/: sim.h
solution/src/: CMakeLists.txt
solution/src/life/: life.c
solution/src/sim/: sim.c
